--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Multivelas Inventario</title>
+    <title>Inventario Multivelas</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="../src/index.tsx"></script>
   </body>
 </html>
